Use 100vh as initial height to avoid jumpiness

--- a/src/components/cover-image.css
+++ b/src/components/cover-image.css
@@ -13,6 +13,10 @@
   opacity: 0.5;
 }
 
+.cover-image-container {
+  height: 100vh;
+}
+
 .cover-image {
   width: 100vw;
   height: 100%;
